solved a illegal reflection issue with gson, discovered a new failure state with ojdk 11 that wasn't caught properly by the output parser