@@ -9,14 +9,14 @@ version := "1.2.1.rc3"
 autoScalaLibrary := false
 
 // More compiler warnings
-scalacOptions ++= Seq("-deprecation", "-unchecked", "-feature", "-Xlint")
+scalacOptions ++= Seq("-deprecation", "-unchecked", "-feature", "-Xlint", "--illegal-access=permit")
 
 javacOptions ++= Seq("-source", "8", "-target", "8")
 
 javacOptions in doc := Seq("-source", "8")
 
 libraryDependencies ++= Seq(
-  "com.google.code.gson" % "gson" % "2.6.2",
+  "com.google.code.gson" % "gson" % "2.8.5",
   "org.apache.httpcomponents" % "httpasyncclient" % "4.1.1",
   "commons-io" % "commons-io" % "2.5",
   "com.novocode" % "junit-interface" % "0.11" % "test->default",
